fix: removed double border on the bottom of the public buildings list

--- a/IndoorMapsFrontend/src/routes/Directory/styles/Directory.css
+++ b/IndoorMapsFrontend/src/routes/Directory/styles/Directory.css
@@ -30,7 +30,7 @@
     padding: 0em .5em;
 }
 
-.buildingsContainer .buildingListLink:last-child {
+.buildingsContainer .buildingListItem:last-child {
     border-bottom-width: 0px;
 }
 
